DBE-29 Be Build Api Filter Category ,Location (#41)
